Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20946

Hard FTWRL deadlock under user level locks

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.19
    • Locking
    • None

    Description

      CREATE TABLE t1(a INT);
      SELECT GET_LOCK("l1", 0);
       
      connect(con1,localhost,root,,);
      LOCK TABLES t1 WRITE;
       
      connection default;
      sleep 1;
      send FLUSH TABLES WITH READ LOCK;
       
      connection con1;
      sleep 1;
      send SELECT GET_LOCK("l1", 10);
       
      connection default;
      reap;
       
      connection con1;
      reap;
      disconnect con1;
       
      connection default;
      SELECT RELEASE_LOCK("l1");
      UNLOCK TABLES;
      DROP TABLE t1;
      

      After MDEV-5336 FTWRL is designed such that it doesn't expect outer MDL locks being held when it is called. Either release user level locks or forbid FTWRL when they're active.

      BACKUP STAGE will likely be affected by this when it receives fixes for some outstanding deadlocks.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.